Prevent content from moving when the scrollbar appears

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,7 @@ body {
 
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
+  overflow-y: scroll;
 }
 
 nav {
